--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-svg": "^14.1.0",
     "twrnc": "^4.2.0"
   },
   "devDependencies": {
