adding build files

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -19,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.shadow07.nativeadvicegenerator"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -28,9 +31,16 @@
       [
         "expo-font",
         {
-          "fonts": ["./fonts/manrope/static/Manrope-ExtraBold.ttf"]
+          "fonts": [
+            "./fonts/manrope/static/Manrope-ExtraBold.ttf"
+          ]
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "c8a889a2-282f-482a-8d09-dc1ad9b51ffc"
+      }
+    }
   }
 }
